--- a/apps/AdminComposite/Views/Shared/LeftRail/Badge.cshtml
+++ b/apps/AdminComposite/Views/Shared/LeftRail/Badge.cshtml
@@ -1,9 +1,9 @@
 ﻿<section id="user-info">
-	<img src="@ViewBag.Gravatar" alt="Sample User Avatar">
+	<img src="@AdminInfo.AuthenticatedUserGravatar" alt="Sample User Avatar">
 	<div>
-		<a href="#" title="Account Settings and Profile Page">@ViewBag.FirstName @ViewBag.LastName</a> <em>Administrator</em>
+		<a href="#" title="Account Settings and Profile Page">@AdminInfo.AuthenticatedUserFirstName @AdminInfo.AuthenticatedUserLastName</a> 
+		<em>@AdminInfo.OrganizationName Administrator</em> 
 		<ul>
-			<li><a class="button-link" href="#">view website</a></li>
 			<li><a class="button-link" href="@Url.Action("DoSignout", "Authentication")">logout</a></li>
 		</ul>
 	</div>
