--- a/apps/AdminComposite/Views/Shared/LeftRail/SitewideNavigation.cshtml
+++ b/apps/AdminComposite/Views/Shared/LeftRail/SitewideNavigation.cshtml
@@ -40,7 +40,7 @@
 			
 				<section class="sidebar nested" style="padding: 10px; text-align: center; margin-bottom: 5px;">
 					<p class="sidebar" style="margin: 0px; display: inline; padding: 0px;">
-						<a href="@forum.UrlHostName/org/@ViewBag.OrganizationSlug/forum/@forum.UrlSlug" target="_blank" class="sidebar" style="margin: 0px; display: inline; padding: 0px;">View Forum</a> 
+						<a href="@forum.UrlHostName/org/@AdminInfo.OrganizationSlug/forum/@forum.UrlSlug" target="_blank" class="sidebar" style="margin: 0px; display: inline; padding: 0px;">View Forum</a> 
 					@*	| 
 						<a href="#" class="sidebar" style="margin: 0px; display: inline; padding: 0px;">Public Forum</a>*@
 					</p>
