--- a/apps/AdminComposite/Views/Shared/_Layout.cshtml
+++ b/apps/AdminComposite/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
 		
 			<section role="navigation">
 				<header>
-					@Html.ActionLink("NewCo Admin Home", "Index", "Dashboard")
+					@Html.ActionLink("NewCo Admin Home", "Index", "Dashboard", new { Area = "" }, null)
 				</header>
 
 				@if (IsSectionDefined("LeftRail"))
