--- a/apps/AdminComposite/Areas/Forum/Views/Content/List.cshtml
+++ b/apps/AdminComposite/Areas/Forum/Views/Content/List.cshtml
@@ -12,7 +12,7 @@
 <script type="text/javascript">
 	$(document).ready(function() {
 		$(".add-content").click(function() {
-			EUCLID.showModalForm("@Url.Action("NewContent", "Content", new { forumId = Model.ForumIdentifier })");
+			EUCLID.showModalForm({ Url:"@Url.Action("NewContent", "Content", new { forumId = Model.ForumIdentifier })"});
 			return false;
 		});
 
