--- a/apps/AdminComposite/Views/Shared/LeftRail/Badge.cshtml
+++ b/apps/AdminComposite/Views/Shared/LeftRail/Badge.cshtml
@@ -4,7 +4,7 @@
 		<a href="#" title="Account Settings and Profile Page">@AdminInfo.AuthenticatedUserFirstName @AdminInfo.AuthenticatedUserLastName</a> 
 		<em>@AdminInfo.OrganizationName Administrator</em> 
 		<ul>
-			<li><a class="button-link" href="@Url.Action("DoSignout", "Authentication")">logout</a></li>
+			<li><a class="button-link" href="@Url.Action("DoSignout", "Authentication", new { Area = ""})">logout</a></li>
 		</ul>
 	</div>
 </section>
